# weston-desktop-plugin

./: README.md  configure.ac
protocol/: Makefile.am  README.txt
src/: Makefile.am  shell.c
